Revert "update nav bar button"
This reverts commit 58423ad133b72a711a8546aae859e0620e25dcb8.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,11 @@
-html {
-  font-family: 'Raleway', sans-serif;
-}
-
 p {
+  font-family: sans-serif;
   color: green;
 }
 
-.navbar {
+nav {
+  height: 20vh;
+
   background-color: rgb(255, 255, 255);
   border-color: rgb(0, 0, 0);
   border-width: 5px;
@@ -16,6 +15,7 @@ p {
 }
 
 .nav-button {
+  font-family: sans-serif;
   background-color: rgb(67, 67, 134);
   color: rgb(255, 255, 255);
   border-color: rgb(67, 67, 134);
@@ -24,33 +24,22 @@ p {
   border-radius: 5px;
   text-align: center;
   cursor: pointer;
-  margin: 5px 5px 5px 5px;
   padding: 10px;
-  transition: box-shadow 1s, background-color 0.5s, color 0.5s,
-    border-color 0.5s;
-}
-
-.nav-button:hover {
-  background-color: white;
-  color: rgb(67, 67, 134);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.233);
-  border-color: white;
 }
 
 li {
   font-size: 20px;
-  display: inline-block;
+
+  display: inline;
 }
 
 .nav-logo {
+  width: 20%;
   font-size: 60px;
   text-align: left;
-  width: 25vw;
-  margin: 10px 10px 10px 10px;
-  transition: text-shadow 0.5s;
-}
-.nav-logo:hover {
-  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.233);
+  width: 100vw;
+  padding: 20px;
+  margin-top: -20px;
 }
 
 a {
